[package]
name = "colorbuddy"
version = "0.1.6"
authors = ["Adam Henley <adamazing@gmail.com>"]
edition = "2021"
description = "Generates a color palette based on an image."
repository = "https://github.com/adamazing/colorbuddy.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
image = "~0.24.4"
mcq = "0.1.0"
clap = { version= "4.0.8", features = ["derive","suggestions","color"] }
exoquant = "0.2.0"
console = "0.15.5"

[[bin]]
name = "colorbuddy"
path = "src/main.rs"
