[package]
name = "color_buddy"
version = "1.0.1"
authors = ["Adam Henley <adamazing@gmail.com>"]
edition = "2021"
description = "Generates a color palette based on an image."
repository = "https://github.com/adamazing/colorbuddy.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "color_buddy"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.65"
image = "~0.24.4"
mcq = "0.1.0"
clap = { version= "4.0.8", features = ["derive","suggestions","color"] }
exoquant = "0.2.0"
console = "0.15.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
chrono = {version= "0.4.41", features = ["serde"]}
thiserror = "1.0.0"
tempfile = "3.20.0"

[[bin]]
name = "colorbuddy"
path = "src/main.rs"
